--- a/CaelumEstoque/CaelumEstoque/Web.config
+++ b/CaelumEstoque/CaelumEstoque/Web.config
@@ -17,6 +17,7 @@
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
+    <globalization uiCulture="pt-BR" culture="pt-BR" requestEncoding="UTF-8" responseEncoding="UTF-8" fileEncoding="UTF-8"/>
   </system.web>
 
   <connectionStrings>
