--- a/CaelumEstoque/CaelumEstoque/CaelumEstoque.csproj
+++ b/CaelumEstoque/CaelumEstoque/CaelumEstoque.csproj
@@ -131,6 +131,11 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201705190240425_inicial.cs" />
+    <Compile Include="Migrations\201705190240425_inicial.Designer.cs">
+      <DependentUpon>201705190240425_inicial.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\CategoriaDoProduto.cs" />
     <Compile Include="Models\Produto.cs" />
     <Compile Include="Models\Usuario.cs" />
@@ -154,6 +159,11 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Content\" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201705190240425_inicial.resx">
+      <DependentUpon>201705190240425_inicial.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
